# VideoArtifactProcessingEngine

./: .dockerignore  .gitignore  ACID_COMPLIANCE_IMPROVEMENTS.md  Dockerfile  ECS_TASK_PROTECTION_IMPLEMENTATION.md  ENHANCED_SHUTDOWN_PROTECTION.md  README.md  deploy-ecs.sh  docker-compose.yml  ecs-service-definition-spot.json  ecs-service-definition.json  ecs-task-definition.json  pyproject.toml  queue_jobs.py  requirements-dev.txt  requirements.txt  setup_env.sh  test_environment.py  test_shutdown_protection.py  test_task_protection_timing.py
src/: main.py
src/video_artifact_processing_engine/: __init__.py  config.py  sqs_handler.py
src/video_artifact_processing_engine/aws/: aws_client.py  db_operations.py  ecs_task_protection.py
src/video_artifact_processing_engine/db/: db_operations.py
src/video_artifact_processing_engine/models/: chunk_model.py  episode_model.py  quote_model.py  shorts_model.py
src/video_artifact_processing_engine/tools/: video_artifacts_cutting_process.py  video_hls_converter.py  video_quote_cutting_process.py  video_short_cutting_process.py
src/video_artifact_processing_engine/utils/: __init__.py  async_retry.py  dynamodbAttributeValueConverter.py  ffmpeg_utils.py  logging_config.py
